Fixed Bug: empty view was not centered

--- a/src/templates/KanbanBoard/EmptyView.module.scss
+++ b/src/templates/KanbanBoard/EmptyView.module.scss
@@ -7,6 +7,6 @@
 }
 
 .emptyContent {
-  margin: $size-normal;
+  margin: auto;
   max-width: $size-normal * 30;
 }
